--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,8 @@ services:
     ports:
       - 3567:3567
     environment:
-      POSTGRESQL_CONNECTION_URI: "postgresql://supertokens_user:somePassword@db:5432/supertokens"
-    networks:
-      - app_network
+      API_KEYS: "admin"
+      POSTGRESQL_CONNECTION_URI: "postgresql://postgres:educacyadmin@database-1.cm1mqzkm36jd.ap-south-1.rds.amazonaws.com:5432/auth_pdeu"
     restart: unless-stopped
     healthcheck:
       test: >
