--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL="postgresql://postgres:educacyadmin@database-1.cm1mqzkm36jd.ap-south-1.rds.amazonaws.com:5432/project_x76a"
-SUPERTOKENS_CONNECTION_URI="http://supertoken.pdeu.educacy.io:3567/"
+SUPERTOKENS_CONNECTION_URI="http://supertoken.pdeu.educacy.io:3567"
 SUPERTOKENS_CONNECTION_API_DOMAIN="http://localhost:5000"
 SUPERTOKENS_CONNECTION_WEBSITE_DOMAIN="http://localhost:3000"
 SUPERTOKENS_CONNECTION_APP_NAME="pdeu.educacy.io"
